[gd_scene load_steps=7 format=3 uid="uid://c14vbrc68t23n"]

[ext_resource type="Script" path="res://scripts/cards/card_ui.gd" id="1_atuvg"]
[ext_resource type="Script" path="res://scripts/cards/Card.gd" id="1_io6tm"]

[sub_resource type="LabelSettings" id="LabelSettings_sg841"]
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mbo1j"]
font_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5oijt"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4inu1"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="Card" type="Area2D"]
script = ExtResource("1_io6tm")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CardUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_atuvg")

[node name="BackGround" type="ColorRect" parent="CardUI"]
layout_mode = 0
offset_left = -80.0
offset_top = -110.0
offset_right = 120.0
offset_bottom = 150.0

[node name="NameLabel" type="Label" parent="CardUI"]
layout_mode = 0
offset_left = -75.0
offset_top = -107.0
offset_right = 118.0
offset_bottom = -80.0
text = " That guy"
label_settings = SubResource("LabelSettings_sg841")

[node name="ManaCostLabel" type="Label" parent="CardUI"]
layout_mode = 0
offset_left = 75.0
offset_top = -109.0
offset_right = 115.0
offset_bottom = -86.0
text = "3w"
label_settings = SubResource("LabelSettings_mbo1j")
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="CardUI"]
layout_mode = 0
offset_left = -59.0
offset_top = 23.0
offset_right = 97.0
offset_bottom = 46.0
text = "Dragon"
label_settings = SubResource("LabelSettings_5oijt")

[node name="RulesText" type="Label" parent="CardUI"]
offset_left = -71.0
offset_top = 46.0
offset_right = 109.0
offset_bottom = 96.0
text = "YO"
label_settings = SubResource("LabelSettings_4inu1")

[node name="PTLabel" type="Label" parent="CardUI"]
layout_mode = 0
offset_left = 55.0
offset_top = 126.0
offset_right = 109.0
offset_bottom = 143.0
text = "YO"
label_settings = SubResource("LabelSettings_4inu1")
horizontal_alignment = 1
